# dit

./: Cargo.toml  README.md  TODO.md
examples/: .dit  .dit3  .tampered  .tampered_dit3
src/: app.rs  dit_core.rs  lib.rs  main.rs  mode_a.rs  validate.rs
src/dit_core/: action.rs  error.rs  game.rs  message.rs  mode.rs  model.rs  ops.rs  state.rs  traits.rs  update.rs  validate.rs  work.rs
src/dit_core/model/: action_interface.rs  book.rs  error.rs  hex_string.rs  ledger.rs  message.rs
