[package]
name = "qit"
version = "0.1.0"
authors = ["testare <testare.i9z@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
bitvec = "0.22.3"
sha3 = "0.9.1"
hex-literal = "0.3.1"
byteorder = "1"
