[package]
name = "dit"
version = "0.1.0"
authors = ["testare <testare.i9z@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.13"
bitvec = "^0.22.3" # I might be able to remove this one
byteorder = "^1"
hex = "^0.4.3"
hex-literal = "^0.3.1"
rand = "^0.8.3"
serde = {version = "^1", features = ["derive"] }
serde_json = "^1"
sha3 = "^0.9.1"
crossterm  = "^0.17"
clap = "^2"
man = "^0.3"
